<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="invalid_form_id">Invalid form_id: %1$s (form name: %2$s).</string>
    <string name="accept_location">Record Location</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="app_name">ODK Survey</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Password</string>
    <string name="change_server_url">Server URL</string>
    <string name="change_username">ODK Username</string>
    <string name="default_completed">Default to Finalized</string>
    <string name="default_completed_summary">Mark form as finalized by default</string>
    <string name="default_server_url">https://opendatakit-2.appspot.com</string>
    <string name="delete_confirm">Delete %s form(s)?\n</string>
    <string name="delete_confirm_entry">\n%1$s\n\u2022 TableId: %2$s\n\u2022 FormId: %3$s Version: %4$s\n</string>
    <string name="delete_file">Delete Selected</string>
    <string name="delete_no">Do Not Delete</string>
    <string name="delete_yes">Delete Forms</string>
    <string name="download">Get Selected</string>
    <string name="download_forms_result">Download Result</string>
    <string name="downloading_data">Downloading Forms from Server</string>
    <string name="downloading_form_list">Obtaining Form List from Server</string>
    <string name="enter_data_button">Fill Blank Form</string>
    <string name="error_occured">Error Occurred</string>
    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
    <string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
    <string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
    <string name="getting_location">Loading Location</string>
    <string name="get_forms">Get Blank Form</string>
    <string name="get_location">Record Location</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="list_failed_with_error">Form listing failed. %s.</string>
    <string name="load_remote_form_error">Error Getting Form List</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_accuracy">Accuracy is %1$s m</string>
    <string name="manage_files">Delete Saved Form</string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_tables">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
    <string name="ok">OK</string>
    <string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
    <string name="password">Password</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="refresh">Refresh</string>
    <string name="review_data">Edit Saved Form</string>
    <string name="review_data_button">Edit Saved Form</string>
    <string name="sending_items">Sending %1$s of %2$s form(s)</string>
    <string name="send_data">Send Finalized Form</string>
    <string name="send_data_button">Send Finalized Form</string>
    <string name="send_selected_data">Send Selected</string>
    <string name="server_auth_credentials">Please enter username and password for server:\n%s</string>
    <string name="server_requires_auth">Server Requires Authentication</string>
    <string name="server_url">URL</string>
    <string name="server_preferences">Server</string>
    <string name="toggle_selected">Toggle All</string>
    <string name="uploading_data">Sending Form</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="username">Username</string>
    <string name="view_hierarchy">Go To Prompt</string>
    <string name="general_preferences">Change Settings</string>
    <string name="click_to_web">Tap to visit http://opendatakit.org</string>
    <string name="client">Client</string>
    <string name="show_splash">Show Splash Screen</string>
    <string name="show_splash_summary">Shows when application starts</string>
    <string name="splash_path">Selected Splash Image</string>
    <string name="default_splash_path">ODK Default</string>
    <string name="select_another_image">Select Another Image</string>
    <string name="use_odk_default">Use Default Image</string>
    <string name="change_splash_path">Change Image</string>
    <string name="app_url">http://opendatakit.org</string>
    <string name="go_to_location">Go to Location</string>
    <string name="change_formlist_url">Form List Path (appended to Server URL)</string>
    <string name="protocol">Server Platform</string>
    <string name="change_protocol">Server Platform</string>
    <string name="change_submission_url">Submission Path (appended to Server URL)</string>
    <string name="formlist_url">Form List Path</string>
    <string name="submission_url">Submission Path</string>
    <string name="font_size">Text Font Size</string>
    <string name="change_font_size">Text Font Size</string>
    <string name="form_scan_starting">Scanning for forms&#8230;</string>
    <string name="table_scan_starting">Scanning for tables&#8230;</string>
    <string name="default_odk_formlist">/formList</string>
    <string name="default_odk_submission">/submission</string>
    <string name="access_error">Error while accessing %s: </string>
    <string name="manifest_server_error">Manifest reply does not report an OpenRosa version &#8212; bad server?</string>
    <string name="root_element_error">Root element is not &lt;manifest\&gt; &#8212; was %s</string>
    <string name="root_namespace_error">Root element Namespace is incorrect: %s</string>
    <string name="manifest_tag_error">Manifest entry %s is missing one or more tags: filename, hash, or downloadUrl</string>
    <string name="form_download_progress">%1$s. Getting media file %2$s (%3$s of %4$s)</string>
    <string name="file_fetch_failed">Error: %2$s (%3$s) at %1$s</string>
    <string name="fetching_manifest">%s. Getting manifest </string>
    <string name="success">Success</string>
    <string name="no_forms_uploaded">Sorry, no form was uploaded.</string>
    <string name="google_account">Select Google Account</string>
    <string name="selected_google_account_text">Google Account</string>
    <string name="server_platform_odk_aggregate">ODK Aggregate</string>
    <string name="server_platform_google_forms">Google Forms</string>
    <string name="server_platform_other">Other</string>
    <string name="font_size_extra_large">Extra Large</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_extra_small">Extra Small</string>
    <string name="change_view">Change View</string>
    <string name="show_sent_and_unsent_forms">Sent and Unsent Forms</string>
    <string name="show_unsent_forms">Unsent Forms Only</string>
    <string name="last_updated_on_date_at_time">\'Last Updated on\' EEE, MMM dd, yyyy \'at\'
    HH:mm</string>
    <string name="added_on_date_at_time">\'Added on\' EEE, MMM dd, yyyy \'at\' HH:mm</string>
    <string name="sent_on_date_at_time">\'Sent on\' EEE, MMM dd, yyyy \'at\' HH:mm</string>
    <string name="sending_failed_on_date_at_time">\'Sending failed on\' EEE, MMM dd, yyyy \'at\' HH:mm</string>
    <string name="version">Version: %1$s</string>
    <string name="media_save_failed">Save of media attachment failed.</string>
    <string name="not_yet_sent">Never Uploaded</string>
    <string name="xforms_file_exists">%1$s file was downloaded from the server but should not be present in %2$s</string>
    <string name="download_in_progress">Sorry, a download is already in progress!</string>
    <string name="disksync_in_progress">Sorry, a disk sync is already in progress!</string>
    <string name="form_download_unzipping">%1$s. Unzipping: %2$s (%3$s of %4$s). File: %5$s</string>
    <string name="no_manifest">%1$s. No manifest or empty manifest</string>
    <string name="form_not_found">The requested form is missing: %1$s</string>
    <string name="invalid_uri_expecting_one_segment">Invalid %1$s uri. Expecting one segment (the appName).</string>
    <string name="invalid_uri_expecting_n_segments">Invalid %1$s uri. Expecting %2$d segments.</string>
    <string name="unrecognized_uri">Unrecognized %1$s uri. Only one of %2$s or %3$s allowed.</string>
    <string name="no_formdef_json">%1$s. No formDef.json</string>
    <string name="mark_as_finished">Finalizing forms</string>
    <string name="user_access_main_menu">User can access Main Menu items:</string>
    <string name="user_access_preferences">User can access Change Settings items:</string>
    <string name="change_server">Server Protocol and URL</string>
    <string name="change_username_default">Username</string>
    <string name="admin_preferences">Admin Settings</string>
    <string name="admin_access_settings">Tap for admin access to settings</string>
    <string name="user_access_form_entry">User can access Form Entry items:</string>
    <string name="save_mid">Mid-form saving</string>
    <string name="save_mid_summary">Disable to allow user to save only at end of form</string>
    <string name="save_as">Saved form renaming</string>
    <string name="save_as_summary">Disable to prevent renaming of forms at end of form entry</string>
    <string name="mark_as_finalized_summary">Disable to save forms based on default status (as selected in Change Settings)</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="verify_new_password">Re-enter new password</string>
    <string name="admin_password_changed">Admin password successfully changed</string>
    <string name="admin_password_disabled">Admin password disabled</string>
    <string name="admin_password_mismatch">Sorry, passwords do not match!</string>
    <string name="admin_password_incorrect">Sorry, password is incorrect!</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="found_in_menu">Found using Menu button in Form Entry</string>
    <string name="shortcut_name">ODK Survey Form</string>
    <string name="form_load_error">Sorry, unable to load form.</string>
    <string name="upload_in_progress">Sorry, instance upload is already in progress!</string>
    <string name="configuring_app">Configuring %1$s &#8230;</string>
    <string name="expansion_unzipping_begins">Unzipping resources. Scanning zip directory.</string>
    <string name="expansion_unzipping_without_detail">Unzipping resources. Extracting %1$s (%2$d of %3$d)</string>
    <string name="expansion_create_dir_detail">Creating directory</string>
    <string name="expansion_unzipping_detail">at byte %1$d out of %2$d compressed bytes overall</string>
    <string name="expansion_unzipping_complete">Unzipping resources completed.</string>
</resources>