
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen
		android:id="@+id/info"
		android:key="info"
		android:title="@string/app_name"
		android:summary="@string/click_to_web"
		android:persistent="false">
		<intent
			android:action="android.intent.action.VIEW"
			android:data="http://opendatakit.org" />
	</PreferenceScreen>
	<PreferenceCategory android:key="@string/server_preferences" android:title="@string/server_preferences">
		<ListPreference
			android:id="@+id/protocol"
			android:key="legacy.protocol"
			android:title="@string/protocol"
			android:dialogTitle="@string/change_protocol"
			android:defaultValue="odk_default"
			android:entries="@array/protocol_entries"
			android:entryValues="@array/protocol_entry_values"
			android:persistent="false" />
		<EditTextPreference
			android:id="@+id/server_url"
			android:key="common.legacy_server_url"
			android:defaultValue="@string/default_server_url"
			android:title="@string/server_url"
			android:inputType="textNoSuggestions"
			android:dialogTitle="@string/change_server_url" 
			android:persistent="false"/>
		<EditTextPreference
			android:id="@+id/username"
			android:key="common.username"
			android:title="@string/username"
			android:inputType="textNoSuggestions"
			android:dialogTitle="@string/change_username" 
			android:persistent="false"/>
		<EditTextPreference
			android:id="@+id/password"
			android:key="common.password"
			android:title="@string/password"
			android:inputType="textNoSuggestions"
			android:dialogTitle="@string/change_password" 
			android:persistent="false"/>
		<!-- android:password="true" -->
		<EditTextPreference
			android:id="@+id/formlist_url"
			android:key="legacy.formlist_url"
			android:title="@string/formlist_url"
			android:inputType="textNoSuggestions"
			android:defaultValue="@string/default_odk_formlist"
			android:dialogTitle="@string/change_formlist_url" 
			android:persistent="false"/>
		<EditTextPreference
			android:id="@+id/submission_url"
			android:key="legacy.submission_url"
			android:title="@string/submission_url"
			android:inputType="textNoSuggestions"
			android:defaultValue="@string/default_odk_submission"
			android:dialogTitle="@string/change_submission_url" 
			android:persistent="false"/>
	</PreferenceCategory>
	<PreferenceCategory android:key="@string/client" android:title="@string/client">
		<ListPreference
			android:id="@+id/font_size"
			android:key="common.font_size"
			android:title="@string/font_size"
			android:dialogTitle="@string/change_font_size"
			android:defaultValue="21"
			android:entries="@array/font_size_entries"
			android:entryValues="@array/font_size_entry_values" 
			android:persistent="false"/>
		<CheckBoxPreference
			android:id="@+id/show_splash"
			android:key="survey.showSplash"
			android:title="@string/show_splash"
			android:summary="@string/show_splash_summary" 
			android:persistent="false"/>
		<PreferenceScreen
			android:id="@+id/splash_path"
			android:key="survey.splashPath"
			android:defaultValue="@string/default_splash_path"
			android:title="@string/splash_path"
			android:dependency="survey.showSplash"
			android:layout="?android:attr/preferenceLayoutChild" 
			android:persistent="false"/>
	</PreferenceCategory>
</PreferenceScreen>